force-app/main/default/objects/Insurancepolicy__c/Insurancepolicy__c.object-meta.xml
<CustomObject>
    <label>Insurance Policy</label>
    <nameField>
        <label>Insurance Policy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Policy</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>