force-app/main/default/objects/Insurancepolicy__c/fields/Health_Insurance_Ratio_by_Employee__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_Ratio_by_Employee__c</fullName>
    <label>Health Insurance Ratio by Employee</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>