force-app/main/default/objects/Insurancepolicy__c/fields/HealthInsuranceRatiobyEmployer__c.field-meta.xml
<CustomField>
    <fullName>HealthInsuranceRatiobyEmployer__c</fullName>
    <label>Health Insurance Ratio by Employer</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>