force-app/main/default/objects/Insurancepolicy__c/fields/HSUInsuranceRatiobyEmployee__c.field-meta.xml
<CustomField>
    <fullName>HSUInsuranceRatiobyEmployee__c</fullName>
    <label>H/S/U Insurance Ratio by Employee</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>