force-app/main/default/objects/Insurancepolicy__c/fields/HSUInsuranceRatiobyEmployeeer__c.field-meta.xml
<CustomField>
    <fullName>HSUInsuranceRatiobyEmployeeer__c</fullName>
    <label>H/S/U Insurance Ratio by Employee/er</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>