force-app/main/default/objects/Insurancepolicy__c/fields/Social_Insurance_Ratio_by_Employee__c.field-meta.xml
<CustomField>
    <fullName>Social_Insurance_Ratio_by_Employee__c</fullName>
    <label>Social Insurance Ratio by Employee</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>