force-app/main/default/objects/Insurancepolicy__c/fields/SocialInsuranceRatiobyEmployer__c.field-meta.xml
<CustomField>
    <fullName>SocialInsuranceRatiobyEmployer__c</fullName>
    <label>Social Insurance Ratio by Employer</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>