force-app/main/default/objects/Insurancepolicy__c/fields/Unemploymentfundratiobyemployee__c.field-meta.xml
<CustomField>
    <fullName>Unemploymentfundratiobyemployee__c</fullName>
    <label>Unemployment Fund Ratio by Employee</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>