force-app/main/default/objects/Insurancepolicy__c/fields/UnemploymentFundRatiobyEmployer__c.field-meta.xml
<CustomField>
    <fullName>UnemploymentFundRatiobyEmployer__c</fullName>
    <label>Unemployment Fund Ratio by Employer</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>