force-app/main/default/objects/Insurancepolicy__c/fields/UnionfundratiobyEmployer__c.field-meta.xml
<CustomField>
    <fullName>UnionfundratiobyEmployer__c</fullName>
    <label>Union fund ratio by Employer</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>